[tool.poetry]
name = "tetra_plug"
version = "0.1.4"
description = "The Tetra Plug package."
authors = ["Hirofumi Tanigami <tanigami@gmail.com>"]

readme = "README.rst"

repository = "https://github.com/tanigami/tetra-plug"

packages = [
    { include = "tetra_plug" },
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
python = "^3.8"
pfun = "^0.11.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
